# app/Models/Policy.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Policy extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'type',
+        'status',
+        'document',
+    ];
+}
